--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 /.idea/
 
+target/
+
 *.iml
 
 # angular generated folders
 /nicnbk-ui-angular2/dist/
 /nicnbk-ui-angular2/node_modules/
 /nicnbk-ui-angular2/typings/
+
+#/nicnbk-ui-angular2/npm-debug.*
