--- a/nicnbk-data/nicnbk-data-ws-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-ws-impl/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>nicnbk-data-service-impl</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <!--<version>2.8.1</version>-->
+        </dependency>
     </dependencies>
 
     <build>
