- bs.config,js - conf file for lite server  -MeetingMemo entity - var char size   - Application.java changed the port accoring to bs.config.js file (port 3002)

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -6,7 +6,10 @@ server.port=8089
 ### DATA SOURCE
 spring.datasource.url=jdbc:postgresql://localhost/nic_invest
 spring.datasource.username=postgres
+
+#spring.datasource.password=PpostgresS
 spring.datasource.password=postgres
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
@@ -21,4 +24,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 ################### APPLICATION PROPERTIES #############################################################################
+#filestorage.root.directory=C:/APP/FILE_STORAGE
 filestorage.root.directory=D:/FILE_STORAGE
