--- a/nicnbk-ui-angular2/package.json
+++ b/nicnbk-ui-angular2/package.json
@@ -25,7 +25,9 @@
     "ng2-tag-input": "^0.2.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
+    "zone.js": "0.6.12",
+    "moment": "2.14.1",
+    "angular2-autosize": "^1.0.0"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
@@ -59,8 +61,6 @@
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.0",
-    "moment": "2.14.1",
-    "expose-loader": "^0.7.1",
-    "angular2-autosize": "^1.0.0"
+    "expose-loader": "^0.7.1"
   }
 }
