UI-Angular2 Fixed version changes with angular2 - to version 2.1.0 (some modules like ng2-select were broken). Hedge Funds - menu and components added but commented out since not finished.

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -25,4 +25,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 ################### APPLICATION PROPERTIES #############################################################################
 #filestorage.root.directory=C:/APP/FILE_STORAGE
-filestorage.root.directory=D:/FILE_STORAGE
+#filestorage.root.directory=D:/FILE_STORAGE
+filestorage.root.directory=C:/FILE_STORAGE
