--- a/nicnbk-data/nicnbk-data-repo-api/pom.xml
+++ b/nicnbk-data/nicnbk-data-repo-api/pom.xml
@@ -52,6 +52,7 @@
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.1-901.jdbc4</version>
+            <!--<version>9.4.1208-jdbc42-atlassian-hosted</version>-->
         </dependency>
     </dependencies>
 
