--- a/nicnbk-ui-angular2/package.json
+++ b/nicnbk-ui-angular2/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular2-webpack",
+  "name": "angular2-nicnbk",
   "version": "1.0.0",
-  "description": "A webpack starter for angular 2",
+  "description": "nicnbk ui-angular2",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 8080",
     "test": "karma start",
@@ -10,57 +10,61 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "~3.1.0",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.25",
+
     "bootstrap": "^3.3.6",
-    "core-js": "^2.4.0",
     "file-saver": "^1.3.2",
-    "ng2-select": "^1.0.3",
+    "ng2-select": "^1.1.0",
     "ng2-tag-input": "^0.2.3",
     "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12",
     "moment": "2.14.1",
     "angular2-autosize": "^1.0.0"
   },
+
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
-    "bootstrap-loader": "^1.2.0-beta.1",
-    "bootstrap-sass": "^3.3.7",
+    "awesome-typescript-loader": "^2.2.4",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
     "jasmine-core": "^2.4.1",
-    "jquery": "^1.12.4",
-    "karma": "^0.13.22",
-    "karma-jasmine": "^0.3.8",
-    "karma-phantomjs-launcher": "^1.0.0",
+    "karma": "^1.2.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
-    "node-sass": "^3.8.0",
+    "karma-webpack": "^1.8.0",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
-    "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.2",
-    "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "to-string-loader": "^1.1.4",
-    "ts-loader": "^0.8.1",
-    "typescript": "^1.8.10",
-    "typings": "^1.0.4",
-    "url-loader": "^0.5.7",
+    "typescript": "^2.0.2",
+    "typings": "^1.3.2",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.0",
+
+    "bootstrap-loader": "^1.2.0-beta.1",
+    "bootstrap-sass": "^3.3.7",
+    "jquery": "^1.12.4",
+    "node-sass": "^3.8.0",
+    "resolve-url-loader": "^1.6.0",
+    "sass-loader": "^4.0.0",
+    "to-string-loader": "^1.1.4",
+    "ts-loader": "^0.8.1",
+    "url-loader": "^0.5.7",
     "expose-loader": "^0.7.1"
   }
 }
