- Upload file size

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.port=8089
 spring.datasource.url=jdbc:postgresql://localhost/nic_invest
 spring.datasource.username=postgres
 
-#spring.datasource.password=PpostgresS
-spring.datasource.password=postgres
+spring.datasource.password=PpostgresS
+#spring.datasource.password=postgres
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -23,7 +23,15 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jackson.date-format=dd-mm-yyyy
 
 
+# Set the file size limit (default 1Mb). If you want to specify that files be
+# unlimited set the multipart.maxFileSize property to -1.
+multipart.maxFileSize = 20Mb
+
+# Set the total request size for a multipart/form-data (default 10Mb)
+multipart.maxRequestSize = 20Mb
+
+
 ################### APPLICATION PROPERTIES #############################################################################
-#filestorage.root.directory=C:/APP/FILE_STORAGE
+filestorage.root.directory=C:/APP/FILE_STORAGE
 #filestorage.root.directory=D:/FILE_STORAGE
-filestorage.root.directory=C:/FILE_STORAGE
+#filestorage.root.directory=C:/FILE_STORAGE
