--- a/nicnbk-data/nicnbk-data-service-api/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-api/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.9.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.6.6</version>
+        </dependency>
     </dependencies>
 
 
