--- a/nicnbk-data/nicnbk-data-service-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-impl/pom.xml
@@ -24,6 +24,19 @@
             <version>1.0</version>
         </dependency>
 
+        <!--<groupId>in.satpathy</groupId>-->
+        <!--<artifactId>jxirr</artifactId>-->
+        <!--<version>1.0.1-SNAPSHOT</version>-->
+        <!--<packaging>jar</packaging>-->
+
+        <dependency>
+            <groupId>in.satpathy</groupId>
+            <artifactId>jxirr</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/jxirr-1.0.1-SNAPSHOT.jar</systemPath>
+        </dependency>
+
         <!-- EXTERNAL -->
         <dependency>
             <groupId>net.sf.dozer</groupId>
