--- a/nicnbk-common/nicnbk-common-service-api/pom.xml
+++ b/nicnbk-common/nicnbk-common-service-api/pom.xml
@@ -16,6 +16,14 @@
             <artifactId>nicnbk-common-repo-api</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+
     </dependencies>
 
 
