--- a/nicnbk-ui-angular2/package.json
+++ b/nicnbk-ui-angular2/package.json
@@ -18,19 +18,17 @@
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
-    "core-js": "^2.4.1",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.25",
-
+    "angular2-busy": "^1.0.2",
     "bootstrap": "^3.3.6",
+    "core-js": "^2.4.1",
     "file-saver": "^1.3.2",
+    "moment": "2.14.1",
     "ng2-select": "^1.1.0",
     "ng2-tag-input": "^0.2.3",
     "reflect-metadata": "0.1.2",
-    "moment": "2.14.1",
-    "angular2-autosize": "^1.0.0"
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.25"
   },
-
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
     "awesome-typescript-loader": "^2.2.4",
@@ -55,7 +53,6 @@
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.0",
-
     "bootstrap-loader": "^1.2.0-beta.1",
     "bootstrap-sass": "^3.3.7",
     "jquery": "^1.12.4",
