--- a/nicnbk-data/nicnbk-data-service-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-impl/pom.xml
@@ -24,11 +24,6 @@
             <version>1.0</version>
         </dependency>
 
-        <!--<groupId>in.satpathy</groupId>-->
-        <!--<artifactId>jxirr</artifactId>-->
-        <!--<version>1.0.1-SNAPSHOT</version>-->
-        <!--<packaging>jar</packaging>-->
-
         <dependency>
             <groupId>in.satpathy</groupId>
             <artifactId>jxirr</artifactId>
@@ -60,7 +55,16 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.7</version>
+        </dependency>
     </dependencies>
 
 
