angular2-busy : loadLookups() is void hence cannot use for busy loading (todo)

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.port=8089
 spring.datasource.url=jdbc:postgresql://localhost/nic_invest
 spring.datasource.username=postgres
 
-spring.datasource.password=PpostgresS
-#spring.datasource.password=postgres
+#spring.datasource.password=PpostgresS
+spring.datasource.password=postgres
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -32,6 +32,11 @@ multipart.maxRequestSize = 20Mb
 
 
 ################### APPLICATION PROPERTIES #############################################################################
-filestorage.root.directory=C:/APP/FILE_STORAGE
-#filestorage.root.directory=D:/FILE_STORAGE
+### PRODUCTION
+#filestorage.root.directory=C:/APP/FILE_STORAGE
+
+### TIMUR
+filestorage.root.directory=D:/FILE_STORAGE
+
+### NURZHAN
 #filestorage.root.directory=C:/FILE_STORAGE
