--- a/nicnbk-data/nicnbk-data-service-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-impl/pom.xml
@@ -29,7 +29,7 @@
             <artifactId>jxirr</artifactId>
             <version>1.0</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/jxirr-1.0.1-SNAPSHOT.jar</systemPath>
+            <systemPath>${project.basedir}/lib/jxirr-1.0.1-SNAPSHOT.jar</systemPath>
         </dependency>
 
         <!-- EXTERNAL -->
