--- a/nicnbk-data/nicnbk-data-service-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-impl/pom.xml
@@ -11,6 +11,15 @@
 
     <artifactId>nicnbk-data-service-impl</artifactId>
 
+
+    <repositories>
+        <repository>
+            <id>in-project</id>
+            <name>In Project Repo</name>
+            <url>file://${project.basedir}/lib</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- INTERNAL -->
         <dependency>
@@ -28,8 +37,8 @@
             <groupId>in.satpathy</groupId>
             <artifactId>jxirr</artifactId>
             <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/jxirr-1.0.1-SNAPSHOT.jar</systemPath>
+            <!--<scope>system</scope>-->
+            <!--<systemPath>${project.basedir}/lib/jxirr-1.0.1-SNAPSHOT.jar</systemPath>-->
         </dependency>
 
         <!-- EXTERNAL -->
