--- a/nicnbk-data/nicnbk-data-service-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-impl/pom.xml
@@ -11,7 +11,6 @@
 
     <artifactId>nicnbk-data-service-impl</artifactId>
 
-
     <repositories>
         <repository>
             <id>in-project</id>
@@ -34,9 +33,9 @@
         </dependency>
 
         <dependency>
-            <groupId>in.satpathy</groupId>
+            <groupId>satpathy</groupId>
             <artifactId>jxirr</artifactId>
-            <version>1.0</version>
+            <version>1.0.1-SNAPSHOT</version>
             <!--<scope>system</scope>-->
             <!--<systemPath>${project.basedir}/lib/jxirr-1.0.1-SNAPSHOT.jar</systemPath>-->
         </dependency>
