--- a/nicnbk-ui-angular2/package.json
+++ b/nicnbk-ui-angular2/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
     "angular2-busy": "^1.0.2",
+    "angular2-elastic": "0.13.0",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "file-saver": "^1.3.2",
