user authentication implemented:             - spring security with token filter and token authentication             - JWT tokens             - role based

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -4,10 +4,11 @@ server.port=8089
 
 
 ### DATA SOURCE
-spring.datasource.url=jdbc:postgresql://localhost/nic_invest
+#spring.datasource.url=jdbc:postgresql://localhost/nic_invest
+spring.datasource.url=jdbc:postgresql://localhost/test_nic_invest
 spring.datasource.username=postgres
 
-#spring.datasource.password=PpostgresS
+#pring.datasource.password=PpostgresS
 spring.datasource.password=postgres
 
 spring.datasource.driver-class-name=org.postgresql.Driver
