1. application.properties file contents re-organized 2. branch merge bugs fixed 3. 'updater' field excluded from dozer mapping  4. logging config file for test env - logback-spring-test.xml  5. m2s2 and trip memo - search result sort order  6. news creation - '---' news type excluded

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -1,19 +1,59 @@
 
-### Embedded server settings
+### TEST SERVER CONFIGURATIONS ########################################################################################
+
+### BACKEND PORT
 server.port=8087
-#server.port=8089
 
+### LOGGING
+logging.config=classpath:logback-spring-test.xml
 
-### DATA SOURCE
+### DATASOURCE
 spring.datasource.url=jdbc:postgresql://localhost/test_unic
-#spring.datasource.url=jdbc:postgresql://localhost/unic1
-
 spring.datasource.username=postgres
 spring.datasource.password=PpostgresS
+
+### FILE STORAGE
+filestorage.root.directory=C:/APP/TEST/FILE_STORAGE_TEST
+
+### PROD SERVER CONFIGURATIONS ########################################################################################
+
+### BACKEND PORT
+#server.port=8089
+
+### LOGGING
+#logging.config=classpath:logback-spring.xml
+
+### DATASOURCE
+#spring.datasource.url=jdbc:postgresql://localhost/unic1
+#spring.datasource.username=postgres
+#spring.datasource.password=PpostgresS
+
+### FILE STORAGE
+#filestorage.root.directory=C:/APP/FILE_STORAGE
+
+### LOCAL DEV CONFIGURATIONS ##########################################################################################
+
+### BACKEND PORT
+#server.port=8089
+
+### LOGGING
+#logging.config=classpath:logback-spring.xml
+
+### DATASOURCE
+#spring.datasource.url=jdbc:postgresql://localhost/test_nic_invest
+#spring.datasource.username=postgres
 #spring.datasource.password=postgres
 
-spring.datasource.driver-class-name=org.postgresql.Driver
+### FILE STORAGE
+#filestorage.root.directory=C:/FILE_STORAGE
+#filestorage.root.directory=D:/FILE_STORAGE
 
+
+
+### COMMON CONFIGURATIONS #############################################################################################
+
+### DATABASE
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 ### JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -33,14 +73,4 @@ multipart.maxFileSize = 20Mb
 multipart.maxRequestSize = 20Mb
 
 
-logging.config=classpath:logback-spring.xml
-
 ################### APPLICATION PROPERTIES #############################################################################
-### PRODUCTION
-filestorage.root.directory=C:/APP/FILE_STORAGE
-
-### TIMUR
-#filestorage.root.directory=D:/FILE_STORAGE
-
-### NURZHAN
-#filestorage.root.directory=C:/FILE_STORAGE
