--- a/nicnbk-data/nicnbk-data-service-api/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-api/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.6.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.2.6.RELEASE</version>
+        </dependency>
     </dependencies>
 
 
