--- a/nicnbk-common/nicnbk-common-service-api/pom.xml
+++ b/nicnbk-common/nicnbk-common-service-api/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>nicnbk-data-repo-api</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.7</version>
+        </dependency>
 
     </dependencies>
 
