--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -13,7 +13,8 @@ spring.datasource.username=postgres
 spring.datasource.password=PpostgresS
 
 ### FILE STORAGE
-filestorage.root.directory=C:/APP/TEST/FILE_STORAGE_TEST
+#filestorage.root.directory=C:/APP/TEST/FILE_STORAGE_TEST
+filestorage.root.directory=/home/unic/data/FILE_STORAGE
 
 ### PROD SERVER CONFIGURATIONS ########################################################################################
 
