linux server config update

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -24,12 +24,14 @@ server.port=8089
 logging.config=classpath:logback-spring.xml
 
 ### DATASOURCE
-spring.datasource.url=jdbc:postgresql://localhost/unic1
+#spring.datasource.url=jdbc:postgresql://localhost/unic1
+spring.datasource.url=jdbc:postgresql://localhost/unic
 spring.datasource.username=postgres
 spring.datasource.password=PpostgresS
 
 ### FILE STORAGE
-filestorage.root.directory=C:/APP/FILE_STORAGE
+#filestorage.root.directory=C:/APP/FILE_STORAGE
+filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
 
 ### LOCAL DEV CONFIGURATIONS ##########################################################################################
 
