--- a/nicnbk-data/nicnbk-data-service-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-impl/pom.xml
@@ -83,8 +83,8 @@
 
         <dependency>
             <groupId>com.itextpdf</groupId>
-            <artifactId>itextpdf</artifactId>
-            <version>5.5.12</version>
+            <artifactId>kernel</artifactId>
+            <version>7.1.0</version>
         </dependency>
     </dependencies>
 
