--- a/nicnbk-data/nicnbk-data-service-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-impl/pom.xml
@@ -40,6 +40,23 @@
             <!--<systemPath>${project.basedir}/lib/jxirr-1.0.1-SNAPSHOT.jar</systemPath>-->
         </dependency>
 
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>kernel</artifactId>
+            <version>7.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>layout</artifactId>
+            <version>7.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>pdftest</artifactId>
+            <version>7.0.1</version>
+        </dependency>
+
         <!-- EXTERNAL -->
         <dependency>
             <groupId>net.sf.dozer</groupId>
