--- a/nicnbk-data/nicnbk-data-service-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-impl/pom.xml
@@ -144,6 +144,12 @@
             <version>7.1.0</version>
             <type>pom</type>
         </dependency>
+
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
     </dependencies>
 
 
