Commit to switch branches

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -42,9 +42,9 @@ filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
 #logging.config=classpath:logback-spring.xml
 
 ### DATASOURCE
-#spring.datasource.url=jdbc:postgresql://192.168.111.110/unic
+#spring.datasource.url=jdbc:postgresql://localhost/test_nic_invest
 #spring.datasource.username=postgres
-#spring.datasource.password=PpostgresS
+#spring.datasource.password=postgres
 
 ### FILE STORAGE
 #filestorage.root.directory=C:/FILE_STORAGE
