Intermediate commit to switch branches

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -42,9 +42,9 @@ server.port=8089
 logging.config=classpath:logback-spring.xml
 
 ### DATASOURCE
-spring.datasource.url=jdbc:postgresql://192.168.111.110/unic
+spring.datasource.url=jdbc:postgresql://10.10.163.151/test_nic_invest
 spring.datasource.username=postgres
-spring.datasource.password=PpostgresS
+spring.datasource.password=postgres
 
 ### FILE STORAGE
 #filestorage.root.directory=C:/FILE_STORAGE
@@ -59,8 +59,13 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 ### JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jpa.show-sql=false
+#####
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
 ### Jackson (for REST)
 ## @Bean Jackson2ObjectMapperBuilder - instead of format config
