--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -42,9 +42,9 @@ server.port=8089
 logging.config=classpath:logback-spring.xml
 
 ### DATASOURCE
-spring.datasource.url=jdbc:postgresql://192.168.111.110/unic
+spring.datasource.url=jdbc:postgresql://localhost:5433/test_nic_invest
 spring.datasource.username=postgres
-spring.datasource.password=PpostgresS
+spring.datasource.password=postgres
 
 ### FILE STORAGE
 #filestorage.root.directory=C:/FILE_STORAGE
