--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -48,7 +48,7 @@ spring.datasource.password=postgres
 
 ### FILE STORAGE
 #filestorage.root.directory=C:/FILE_STORAGE
-filestorage.root.directory=D:/FILE_STORAGE
+filestorage.root.directory=E:/FILE_STORAGE
 
 
 
