Reporting NBRK - adding Terra

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -42,7 +42,7 @@ server.port=8089
 logging.config=classpath:logback-spring.xml
 
 ### DATASOURCE
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_nic_invest
+spring.datasource.url=jdbc:postgresql://localhost:5432/unic
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
