--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -2,15 +2,15 @@
 ### TEST SERVER CONFIGURATIONS ########################################################################################
 
 ### BACKEND PORT
-server.port=8087
+#server.port=8087
 
 ### LOGGING
-logging.config=classpath:logback-spring-test.xml
+#logging.config=classpath:logback-spring-test.xml
 
 ### DATASOURCE
-spring.datasource.url=jdbc:postgresql://localhost/test_unic
-spring.datasource.username=postgres
-spring.datasource.password=PpostgresS
+#spring.datasource.url=jdbc:postgresql://localhost/test_unic
+#spring.datasource.username=postgres
+#spring.datasource.password=PpostgresS
 
 ### FILE STORAGE
 #filestorage.root.directory=C:/APP/TEST/FILE_STORAGE_TEST
@@ -36,19 +36,19 @@ filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
 ### LOCAL DEV CONFIGURATIONS ##########################################################################################
 
 ### BACKEND PORT
-#server.port=8089
+server.port=8089
 
 ### LOGGING
-#logging.config=classpath:logback-spring.xml
+logging.config=classpath:logback-spring.xml
 
 ### DATASOURCE
-#spring.datasource.url=jdbc:postgresql://localhost:5432/test_nic_invest
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_nic_invest
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 ### FILE STORAGE
 #filestorage.root.directory=C:/FILE_STORAGE
-#filestorage.root.directory=D:/FILE_STORAGE
+filestorage.root.directory=D:/FILE_STORAGE
 
 
 
