--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -14,7 +14,7 @@
 
 ### FILE STORAGE
 #filestorage.root.directory=C:/APP/TEST/FILE_STORAGE_TEST
-filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
+#filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
 
 ### PROD SERVER CONFIGURATIONS ########################################################################################
 
