--- a/nicnbk-data/nicnbk-data-service-api/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-api/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>spring-web</artifactId>
             <version>4.2.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.6</version>
+        </dependency>
     </dependencies>
 
 
