NB Reporting: added 'Bank accounts' to generated Terra form, but question remains about ASSETS.

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -27,10 +27,9 @@ filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
 ### DATASOURCE
 #spring.datasource.url=jdbc:postgresql://localhost/unic
 #spring.datasource.username=postgres
-#spring.datasource.password=PpostgresS
+#spring.datasource.password=postgres
 
 ### FILE STORAGE
-#filestorage.root.directory=C:/APP/FILE_STORAGE
 #filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
 
 ### LOCAL DEV CONFIGURATIONS ##########################################################################################
