--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -32,6 +32,7 @@
 ### FILE STORAGE
 #filestorage.root.directory=C:/APP/FILE_STORAGE
 #filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
+#multipart.location= /home/unic/datastorage/FILE_STORAGE/tmp
 
 ### LOCAL DEV CONFIGURATIONS ##########################################################################################
 
@@ -49,7 +50,7 @@ spring.datasource.password=postgres
 ### FILE STORAGE
 #filestorage.root.directory=C:/FILE_STORAGE
 filestorage.root.directory=D:/FILE_STORAGE_2
-
+multipart.location= D://FILE_STORAGE_2/tmp
 
 
 ### COMMON CONFIGURATIONS #############################################################################################
