--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -36,19 +36,19 @@ filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
 ### LOCAL DEV CONFIGURATIONS ##########################################################################################
 
 ## BACKEND PORT
-server.port=8089
+#server.port=8089
 
 ## LOGGING
-logging.config=classpath:logback-spring.xml
+#logging.config=classpath:logback-spring.xml
 
 ## DATASOURCE
-spring.datasource.url=jdbc:postgresql://localhost:5432/unic
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/unic
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 
 ## FILE STORAGE
 #filestorage.root.directory=C:/FILE_STORAGE
-filestorage.root.directory=D:/FILE_STORAGE
+#filestorage.root.directory=D:/FILE_STORAGE
 
 
 
