--- a/nicnbk-ui-angular2/package.json
+++ b/nicnbk-ui-angular2/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "nicnbk ui-angular2",
   "scripts": {
-    "start": "webpack-dev-server --progress --port 8080 --host 10.10.163.5",
+    "start": "webpack-dev-server --progress --port 8080 --host localhost",
     "test": "karma start",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
     "postinstall": "typings install"
