Config files Login and appcomponent html latest versions

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 ### TEST SERVER CONFIGURATIONS ########################################################################################
 
-### BACKEND PORT
+## BACKEND PORT
 server.port=8087
 
 ### LOGGING
@@ -38,18 +38,17 @@ filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
 
 ## BACKEND PORT
 #server.port=8089
-
+#
 ## LOGGING
 #logging.config=classpath:logback-spring.xml
-
+#
 ## DATASOURCE
 #spring.datasource.url=jdbc:postgresql://localhost:5432/unic
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
-
+#
 ## FILE STORAGE
-#filestorage.root.directory=C:/FILE_STORAGE
-#filestorage.root.directory=D:/FILE_STORAGE
+#filestorage.root.directory=D:/FILE_STORAGE_2
 
 ### COMMON CONFIGURATIONS #############################################################################################
 
