--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -1,38 +1,38 @@
 
 ### TEST SERVER CONFIGURATIONS ########################################################################################
 
-## BACKEND PORT
-server.port=8087
-
-### LOGGING
-logging.config=classpath:logback-spring-test.xml
-
-### DATASOURCE
-spring.datasource.url=jdbc:postgresql://localhost/test_unic
-spring.datasource.username=postgres
-spring.datasource.password=PpostgresS
-
-### FILE STORAGE
-#filestorage.root.directory=C:/APP/TEST/FILE_STORAGE_TEST
-filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
-
-### PROD SERVER CONFIGURATIONS ########################################################################################
-
-#### BACKEND PORT
-#server.port=8089
+### BACKEND PORT
+#server.port=8087
 #
 #### LOGGING
-#logging.config=classpath:logback-spring.xml
+#logging.config=classpath:logback-spring-test.xml
 #
 #### DATASOURCE
-#spring.datasource.url=jdbc:postgresql://localhost/unic
+#spring.datasource.url=jdbc:postgresql://localhost/test_unic
 #spring.datasource.username=postgres
 #spring.datasource.password=PpostgresS
 #
 #### FILE STORAGE
-##filestorage.root.directory=C:/APP/FILE_STORAGE
+##filestorage.root.directory=C:/APP/TEST/FILE_STORAGE_TEST
 #filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
-#multipart.location= /home/unic/datastorage/FILE_STORAGE/tmp
+
+### PROD SERVER CONFIGURATIONS ########################################################################################
+
+### BACKEND PORT
+server.port=8089
+
+### LOGGING
+logging.config=classpath:logback-spring.xml
+
+### DATASOURCE
+spring.datasource.url=jdbc:postgresql://localhost/unic
+spring.datasource.username=postgres
+spring.datasource.password=PpostgresS
+
+### FILE STORAGE
+#filestorage.root.directory=C:/APP/FILE_STORAGE
+filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
+multipart.location= /home/unic/datastorage/FILE_STORAGE/tmp
 
 ### LOCAL DEV CONFIGURATIONS ##########################################################################################
 
