--- a/nicnbk-data/nicnbk-data-repo-api/pom.xml
+++ b/nicnbk-data/nicnbk-data-repo-api/pom.xml
@@ -22,6 +22,15 @@
             <artifactId>dbunit</artifactId>
             <version>2.4.9</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-envers -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-envers</artifactId>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.data</groupId>-->
+            <!--<artifactId>spring-data-envers</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.github.springtestdbunit</groupId>
             <artifactId>spring-test-dbunit</artifactId>
@@ -65,5 +74,10 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
+    <repository>
+        <id>spring-libs-snapshot</id>
+        <name>Spring Snapshot Repository</name>
+        <url>https://repo.spring.io/libs-snapshot</url>
+    </repository>
 
 </project>
