--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 
 ### TEST SERVER CONFIGURATIONS ########################################################################################
 
-### BACKEND PORT
-#server.port=8087
-#
-#### LOGGING
-#logging.config=classpath:logback-spring-test.xml
-#
-#### DATASOURCE
-#spring.datasource.url=jdbc:postgresql://localhost/test_unic
-#spring.datasource.username=postgres
-#spring.datasource.password=PpostgresS
-#
-#### FILE STORAGE
-##filestorage.root.directory=C:/APP/TEST/FILE_STORAGE_TEST
-#filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
+## BACKEND PORT
+server.port=8087
+
+### LOGGING
+logging.config=classpath:logback-spring-test.xml
+
+### DATASOURCE
+spring.datasource.url=jdbc:postgresql://localhost/test_unic
+spring.datasource.username=postgres
+spring.datasource.password=PpostgresS
+
+### FILE STORAGE
+#filestorage.root.directory=C:/APP/TEST/FILE_STORAGE_TEST
+filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
 
 ### PROD SERVER CONFIGURATIONS ########################################################################################
 
@@ -36,19 +36,19 @@
 
 ### LOCAL DEV CONFIGURATIONS ##########################################################################################
 
-# BACKEND PORT
-server.port=8089
-
-# LOGGING
-logging.config=classpath:logback-spring.xml
-
-# DATASOURCE
-spring.datasource.url=jdbc:postgresql://localhost:5432/unic
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-
-# FILE STORAGE
-filestorage.root.directory=D:/FILE_STORAGE_2
+## BACKEND PORT
+#server.port=8089
+#
+## LOGGING
+#logging.config=classpath:logback-spring.xml
+#
+## DATASOURCE
+#spring.datasource.url=jdbc:postgresql://localhost:5432/unic
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#
+## FILE STORAGE
+#filestorage.root.directory=D:/FILE_STORAGE_2
 
 ### COMMON CONFIGURATIONS #############################################################################################
 
