File REST permissions updated to account for admin.

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -48,7 +48,7 @@ filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
 #spring.datasource.password=postgres
 #
 ## FILE STORAGE
-#filestorage.root.directory=D:/FILE_STORAGE_2
+#filestorage.root.directory=D:/FILE_STORAGE
 
 ### COMMON CONFIGURATIONS #############################################################################################
 
