Singularity Monitoring completed. TODO: return required fields and test

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -48,7 +48,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 # FILE STORAGE
-filestorage.root.directory=D:/FILE_STORAGE_2
+filestorage.root.directory=D:/FILE_STORAGE
 
 ### COMMON CONFIGURATIONS #############################################################################################
 
@@ -57,7 +57,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 ### JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 ### Jackson (for REST)
