--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -65,9 +65,9 @@ server.port=8089
 logging.config=classpath:logback-spring.xml
 
 # DATASOURCE
-spring.datasource.url=jdbc:postgresql://localhost:5432/unic
+spring.datasource.url=jdbc:postgresql://192.168.111.103:5432/unic
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=PpostgresS
 
 # FILE STORAGE
 filestorage.root.directory=D:/FILE_STORAGE
