Reworked and simplified Email Service to send emails using corporate Exchange server. To add additional functions, and rework rest endpoints to be meaningful.

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -29,7 +29,7 @@ server.ssl.key-alias=tomcat
 
 ### PROD SERVER CONFIGURATIONS ########################################################################################
 
-##### BACKEND PORT
+#### BACKEND PORT
 #server.port=8089
 #
 #### LOGGING
@@ -81,6 +81,17 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+
+#SMTP
+spring.mail.host=mail.nicnbk.kz
+spring.mail.port=587
+spring.mail.username=tleugabylov@nicnbk.kz
+spring.mail.password=my_password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=false
+
+# path to attachment file
+attachment.invoice=C:/Users/tleugabylov/Documents/Middle office.png
 
 ### Jackson (for REST)
 ## @Bean Jackson2ObjectMapperBuilder - instead of format config
