--- a/nicnbk-data/nicnbk-data-service-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-impl/pom.xml
@@ -184,6 +184,11 @@
             <artifactId>blpapi</artifactId>
             <version>3.15.2-1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.3.4.RELEASE</version>
+        </dependency>
 
         <!-- javax.annotation could not be resolved at JWTTokenServiceImpl.java -->
         <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
