1) File service: added in browser pdf opening. 2) IC Module: - remove update block from ic meeting topic - added email notifications

--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -85,8 +85,10 @@ spring.jpa.hibernate.ddl-auto=update
 #SMTP
 spring.mail.host=mail.nicnbk.kz
 spring.mail.port=587
-spring.mail.username=tleugabylov@nicnbk.kz
-spring.mail.password=my_password
+
+spring.mail.username=unic@nicnbk.kz
+spring.mail.password=Hfccskrf!)_3764
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=false
 
